--- a/google_translator.ipynb
+++ b/google_translator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c9bc9d81",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "885c1b2d",
    "metadata": {},
    "outputs": [
@@ -26,14 +26,14 @@
     }
    ],
    "source": [
-    "import googletrans\n",
+    "from googletrans import Translator\n",
     "import iso639\n",
     "print(googletrans.LANGUAGES)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "cd242d8d",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        " 'utils']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "06ef6579",
    "metadata": {},
    "outputs": [
@@ -81,9 +81,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the text to transalte namaskaram\n",
-      "Text: Hello\n",
-      "Source Language: te\n",
+      "Enter the text to transalte namaste\n",
+      "Text: hello\n",
+      "Source Language: hi\n",
       "Destination Language: en\n",
       "\n"
      ]
@@ -91,6 +91,7 @@
    ],
    "source": [
     "text_to_translate = input('Enter the text to transalte ')\n",
+    "translator = Translator()\n",
     "result = translator.translate(text_to_translate)\n",
     "print(\"Text:\", result.text)\n",
     "print(\"Source Language:\", result.src)\n",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "2fb971da",
    "metadata": {},
    "outputs": [
@@ -136,8 +137,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "056e2920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the text to translate: em chestunav\n",
+      "Enter the language code of the destination language (e.g., en for English): hi\n",
+      "Translated Text: आप क्या कर रहे हो\n",
+      "Source Language: te\n",
+      "Destination Language: hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_to_translate = input(\"Enter the text to translate: \")\n",
+    "\n",
+    "destination_language = input(\"Enter the language code of the destination language (e.g., en for English): \")\n",
+    "\n",
+    "result = translator.translate(text_to_translate, dest=destination_language)\n",
+    "\n",
+    "print(\"Translated Text:\", result.text)\n",
+    "print(\"Source Language:\", result.src)\n",
+    "print(\"Destination Language:\", result.dest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b75397bc",
    "metadata": {},
    "outputs": [],
    "source": []
