--- a/password_generator.ipynb
+++ b/password_generator.ipynb
@@ -17,7 +17,7 @@
    ],
    "source": [
     "import random\n",
-    "passlen = int(input(\"enter the length of password\"))\n",
+    "passlen = 10\n",
     "s=\"abcdefghijklmnopqrstuvwxyz01234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()?\"\n",
     "password =  \"\".join(random.sample(s,passlen))\n",
     "print(password)"
